{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerController",
            "id": "7f6a8d61-5672-4db3-92f4-e822117dd682",
            "actions": [
                {
                    "name": "MoveXAxis",
                    "type": "Button",
                    "id": "d8eddfd3-dde7-48a8-add5-73c8d75a8ae5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveZAxis",
                    "type": "Button",
                    "id": "fc3091ce-fa38-448d-a7fd-e6f217310f2b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "582a1890-9feb-4731-a495-ab5ae47780c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "6c0c2209-3e59-4165-81af-8d6e2306f598",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "28bca2ab-45a8-4b57-a944-82787e7722aa",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "48ef8430-631c-41ac-b839-603ea66f26c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2b3cde6c-7a2d-4006-b949-bcdd00af8a56",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "46bc8cb8-5d5b-480b-9390-ebc8c0c56b58",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "18391bdd-be27-4ded-8b93-57c2517b88e5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ac94a0b9-9518-40b5-a9da-17128b0fc591",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveXAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "3a4d3809-aef8-4c06-a708-8596ea8f31d4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "eda9e0a3-7545-467c-9b56-fe3a46462f8d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "48dd0454-f1a0-49bd-b397-5fc91c6afeb8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4f94860b-7c98-414f-ac23-134292b26156",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "842eee85-924a-482e-9f94-944778a65d22",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SceneController",
            "id": "eabc933f-e2eb-4044-b572-bd04b7068e2e",
            "actions": [
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "275c2542-44a4-4a97-99ef-3cd160af9a66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6124288-d134-494a-8374-e673a2da3788",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}